Fix text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ p {
     float: right;
     width: 100%;
     margin: 0;
-    text-align: justify;
 }
 select {
     float: left;
